
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_7__ TYPE_4__ ;
typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


typedef int WPARAM ;
typedef int UINT ;
struct TYPE_7__ {int hInstance; } ;
struct TYPE_6__ {int mask; int fmt; int cxy; int pszText; } ;
struct TYPE_5__ {int * widths; } ;
typedef TYPE_1__ Pane ;
typedef int LPARAM ;
typedef int HWND ;
typedef int HMENU ;
typedef TYPE_2__ HDITEMW ;


 int COLUMNS ;
 int CreateWindowW (int ,int ,int,int ,int ,int ,int ,int ,int ,int ,int ) ;
 int DEFAULT_GUI_FONT ;
 int FALSE ;
 scalar_t__ GetStockObject (int ) ;
 TYPE_4__ Globals ;
 int HDF_STRING ;
 int HDI_FORMAT ;
 int HDI_TEXT ;
 int HDI_WIDTH ;
 int HDM_INSERTITEMW ;
 int HDS_FULLDRAG ;
 int HDS_HORZ ;
 int SendMessageW (int ,int ,int,int ) ;
 scalar_t__ ULongToHandle (int ) ;
 int WC_HEADERW ;
 int WM_SETFONT ;
 int WS_CHILD ;
 int WS_VISIBLE ;
 int* g_pos_align ;
 int * g_pos_names ;

__attribute__((used)) static HWND create_header(HWND parent, Pane* pane, UINT id)
{
 HDITEMW hdi;
 int idx;

 HWND hwnd = CreateWindowW(WC_HEADERW, 0, WS_CHILD|WS_VISIBLE|HDS_HORZ|HDS_FULLDRAG ,
                                 0, 0, 0, 0, parent, (HMENU)ULongToHandle(id), Globals.hInstance, 0);
 if (!hwnd)
  return 0;

 SendMessageW(hwnd, WM_SETFONT, (WPARAM)GetStockObject(DEFAULT_GUI_FONT), FALSE);

 hdi.mask = HDI_TEXT|HDI_WIDTH|HDI_FORMAT;

 for(idx=0; idx<COLUMNS; idx++) {
  hdi.pszText = g_pos_names[idx];
  hdi.fmt = HDF_STRING | g_pos_align[idx];
  hdi.cxy = pane->widths[idx];
  SendMessageW(hwnd, HDM_INSERTITEMW, idx, (LPARAM)&hdi);
 }

 return hwnd;
}
