; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/winfile/extr_winefile.c_create_header.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/winfile/extr_winefile.c_create_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_5__ = type { i32* }
%struct.TYPE_6__ = type { i32, i32, i32, i32 }

@WC_HEADERW = common dso_local global i32 0, align 4
@WS_CHILD = common dso_local global i32 0, align 4
@WS_VISIBLE = common dso_local global i32 0, align 4
@HDS_HORZ = common dso_local global i32 0, align 4
@HDS_FULLDRAG = common dso_local global i32 0, align 4
@Globals = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@WM_SETFONT = common dso_local global i32 0, align 4
@DEFAULT_GUI_FONT = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@HDI_TEXT = common dso_local global i32 0, align 4
@HDI_WIDTH = common dso_local global i32 0, align 4
@HDI_FORMAT = common dso_local global i32 0, align 4
@COLUMNS = common dso_local global i32 0, align 4
@g_pos_names = common dso_local global i32* null, align 8
@HDF_STRING = common dso_local global i32 0, align 4
@g_pos_align = common dso_local global i32* null, align 8
@HDM_INSERTITEMW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.TYPE_5__*, i32)* @create_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_header(i32 %0, %struct.TYPE_5__* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_6__, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load i32, i32* @WC_HEADERW, align 4
  %12 = load i32, i32* @WS_CHILD, align 4
  %13 = load i32, i32* @WS_VISIBLE, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @HDS_HORZ, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @HDS_FULLDRAG, align 4
  %18 = or i32 %16, %17
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* %7, align 4
  %21 = call i64 @ULongToHandle(i32 %20)
  %22 = trunc i64 %21 to i32
  %23 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @Globals, i32 0, i32 0), align 4
  %24 = call i32 @CreateWindowW(i32 %11, i32 0, i32 %18, i32 0, i32 0, i32 0, i32 0, i32 %19, i32 %22, i32 %23, i32 0)
  store i32 %24, i32* %10, align 4
  %25 = load i32, i32* %10, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %28, label %27

27:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %79

28:                                               ; preds = %3
  %29 = load i32, i32* %10, align 4
  %30 = load i32, i32* @WM_SETFONT, align 4
  %31 = load i32, i32* @DEFAULT_GUI_FONT, align 4
  %32 = call i64 @GetStockObject(i32 %31)
  %33 = trunc i64 %32 to i32
  %34 = load i32, i32* @FALSE, align 4
  %35 = call i32 @SendMessageW(i32 %29, i32 %30, i32 %33, i32 %34)
  %36 = load i32, i32* @HDI_TEXT, align 4
  %37 = load i32, i32* @HDI_WIDTH, align 4
  %38 = or i32 %36, %37
  %39 = load i32, i32* @HDI_FORMAT, align 4
  %40 = or i32 %38, %39
  %41 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  store i32 %40, i32* %41, align 4
  store i32 0, i32* %9, align 4
  br label %42

42:                                               ; preds = %74, %28
  %43 = load i32, i32* %9, align 4
  %44 = load i32, i32* @COLUMNS, align 4
  %45 = icmp slt i32 %43, %44
  br i1 %45, label %46, label %77

46:                                               ; preds = %42
  %47 = load i32*, i32** @g_pos_names, align 8
  %48 = load i32, i32* %9, align 4
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds i32, i32* %47, i64 %49
  %51 = load i32, i32* %50, align 4
  %52 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 3
  store i32 %51, i32* %52, align 4
  %53 = load i32, i32* @HDF_STRING, align 4
  %54 = load i32*, i32** @g_pos_align, align 8
  %55 = load i32, i32* %9, align 4
  %56 = sext i32 %55 to i64
  %57 = getelementptr inbounds i32, i32* %54, i64 %56
  %58 = load i32, i32* %57, align 4
  %59 = or i32 %53, %58
  %60 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 1
  store i32 %59, i32* %60, align 4
  %61 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %62 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %61, i32 0, i32 0
  %63 = load i32*, i32** %62, align 8
  %64 = load i32, i32* %9, align 4
  %65 = sext i32 %64 to i64
  %66 = getelementptr inbounds i32, i32* %63, i64 %65
  %67 = load i32, i32* %66, align 4
  %68 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 2
  store i32 %67, i32* %68, align 4
  %69 = load i32, i32* %10, align 4
  %70 = load i32, i32* @HDM_INSERTITEMW, align 4
  %71 = load i32, i32* %9, align 4
  %72 = ptrtoint %struct.TYPE_6__* %8 to i32
  %73 = call i32 @SendMessageW(i32 %69, i32 %70, i32 %71, i32 %72)
  br label %74

74:                                               ; preds = %46
  %75 = load i32, i32* %9, align 4
  %76 = add nsw i32 %75, 1
  store i32 %76, i32* %9, align 4
  br label %42

77:                                               ; preds = %42
  %78 = load i32, i32* %10, align 4
  store i32 %78, i32* %4, align 4
  br label %79

79:                                               ; preds = %77, %27
  %80 = load i32, i32* %4, align 4
  ret i32 %80
}

declare dso_local i32 @CreateWindowW(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i64 @ULongToHandle(i32) #1

declare dso_local i32 @SendMessageW(i32, i32, i32, i32) #1

declare dso_local i64 @GetStockObject(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
